<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/home_group">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
    </group>



    <group android:id="@+id/category_group">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_restaurant_menu_black_24dp"
            android:title="@string/menu_menu" />

    </group>
    <!--        <item-->
    <!--            android:id="@+id/nav_food_list"-->
    <!--            android:icon="@drawable/ic_menu_slideshow"-->
    <!--            android:title="@string/menu_food_list" />-->

    <!--        <item-->
    <!--            android:id="@+id/nav_food_detail"-->
    <!--            android:icon="@drawable/ic_menu_slideshow"-->
    <!--            android:title="@string/menu_food_detail" />-->

    <group android:id="@+id/news_group">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_baseline_markunread_24"
            android:title="@string/menu_subscribe_news" />
    </group>

    <group android:id="@+id/cart_group">
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/menu_cart" />
    </group>

    <group android:id="@+id/view_orders_group">
        <item
            android:id="@+id/nav_view_orders"
            android:icon="@drawable/ic_view_headline_black_24dp"
            android:title="@string/view_orders" />
    </group>





</menu>
